--- a/src/index.css
+++ b/src/index.css
@@ -40,3 +40,20 @@ body{
 .CodeMirror{
     height: 100% !important;
 }
+
+.editor-container.collapsed{
+    flex-grow: 0;
+}
+
+.editor-container.collapsed .CodeMirror-scroll{
+    position: absolute;
+    overflow: hidden !important;
+}
+
+.expand-collapse-btn{
+    margin-left: .5rem;
+    background: none;
+    border: none;
+    color: white;
+    cursor: pointer;
+}
